tests/externInfo/dhrystone-exported/db/invalid/path/memcpy_x.c.ttp
./db/invalid/path/memcpy_x.c : 67.20-67.21 : -- value at line 69, column 8 --# #                                   d ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {0}# 
./db/invalid/path/memcpy_x.c : 67.29-67.30 : -- value at line 69, column 8 --# #                                   s ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {48} /\ != 0# 
./db/invalid/path/memcpy_x.c : 67.36-67.37 : -- value at line 69, column 8 --# # l ; signed int ; {48} /\ != 0# 
./db/invalid/path/memcpy_x.c : 69.15-69.16 : -- value at line 69, column 8 --# # l ; signed int ; {48} /\ != 0#  #-- value at line 69, column 20 --# # l ; signed int ; [0, 47]# 
./db/invalid/path/memcpy_x.c : 69.21-69.22 : -- value at line 69, column 20 --# #                                    d ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + [0, 47]#  #-- value at line 71, column 8 --# #                                     d ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {48} /\ != 0# 
./db/invalid/path/memcpy_x.c : 69.28-69.29 : -- value at line 69, column 20 --# #                                    s ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + [48, 95] /\ != 0#  #-- value at line 71, column 8 --# #                                     s ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {96} /\ != 0# 
./db/invalid/path/memcpy_x.c : 71.8-71.15 : -- value at line 71, column 8 --# # counter ; signed int ; {521} /\ != 0# 
